centralize generate-docs on release

--- a/Src/Razor/ToSic.Sxc.Razor/ToSic.Sxc.Razor.csproj
+++ b/Src/Razor/ToSic.Sxc.Razor/ToSic.Sxc.Razor.csproj
@@ -4,15 +4,11 @@
 
   <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
 
+  <Import Project="../../SharedImports/CsProj.Props/CreateXDocsOnRelease.props" />
+
   <!-- Note: not sure what this is for... -->
   <PropertyGroup>
     <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <!-- generate xml docs -->
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>1701;1702;CS1570;CS1572;CS1573;CS1574;CS1587;CS1591;CS1710;CS1711</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
