--- a/Src/Oqtane/ToSic.Sxc.Oqt.Client/ToSic.Sxc.Oqt.Client.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Client/ToSic.Sxc.Oqt.Client.csproj
@@ -7,11 +7,7 @@
     <AssemblyName>ToSic.Sxc.Oqtane.Client</AssemblyName>
   </PropertyGroup>
   
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <!-- generate xml docs -->
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>1701;1702;CS1570;CS1572;CS1573;CS1574;CS1587;CS1591;CS1710;CS1711</NoWarn>
-  </PropertyGroup>
+  <Import Project="../../SharedImports/CsProj.Props/CreateXDocsOnRelease.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" /><!-- from Oqtane.Client.csproj -->
