--- a/Src/Sxc/ToSic.Sxc.Code.Generate/ToSic.Sxc.Code.Generate.csproj
+++ b/Src/Sxc/ToSic.Sxc.Code.Generate/ToSic.Sxc.Code.Generate.csproj
@@ -2,15 +2,10 @@
 
   <Import Project="../../SharedImports/CsProj.Props/AllImportsForRealCode.props" />
 
+  <Import Project="../../SharedImports/CsProj.Props/CreateXDocsOnRelease.props" />
+
   <PropertyGroup>
     <AssemblyName>ToSic.Sxc.Code.Generate</AssemblyName>
-  </PropertyGroup>
-
-  <!-- TODO: Unclear what this is for, Tonci must have introduced it, not sure if it's relevant -->
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <!-- generate xml docs -->
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>1701;1702;CS1570;CS1572;CS1573;CS1574;CS1587;CS1591;CS1710;CS1711</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
