--- a/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
+++ b/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
@@ -2,19 +2,13 @@
 
   <Import Project="../../SharedImports/CsProj.Props/AllImportsForRealCode.props" />
 
+  <Import Project="../../SharedImports/CsProj.Props/CreateXDocsOnRelease.props" />
+
   <PropertyGroup>
     <AssemblyName>ToSic.Sxc.WebApi</AssemblyName>
   </PropertyGroup>
 
   <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
-
-
-  <!-- TODO: Unclear Why - if relevant, we should centralize! -->
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <!-- generate xml docs -->
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>1701;1702;CS1570;CS1572;CS1573;CS1574;CS1587;CS1591;CS1710;CS1711</NoWarn>
-  </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Apps\ToSic.Eav.Apps.csproj" />
