reorg adam to be "Work" and separate DTO maker downstream

--- a/Src/Sxc/ToSic.Sxc.Web/ToSic.Sxc.Web.csproj
+++ b/Src/Sxc/ToSic.Sxc.Web/ToSic.Sxc.Web.csproj
@@ -9,6 +9,7 @@
   <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
 
   <ItemGroup>
+    <ProjectReference Include="..\ToSic.Sxc.Adam\ToSic.Sxc.Adam.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Engines\ToSic.Sxc.Engines.csproj" />
   </ItemGroup>
