--- a/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
+++ b/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
@@ -133,6 +133,8 @@
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.WebApi.pdb" />-->
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.*.dll" Exclude="ToSic.Sxc.Dnn.Enterprise.dll"/>
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.*.pdb" Exclude="ToSic.Sxc.Dnn.Enterprise.pdb"/>
+      <AssemblyInclude Include="$(OutDir)\ToSic.Eav.dll" />
+      <AssemblyHelper Include="$(OutDir)\ToSic.Eav.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Eav.*.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Eav.*.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Lib.*.dll" />
