--- a/Src/Dnn/ToSic.Sxc.Dnn/ToSic.Sxc.Dnn.csproj
+++ b/Src/Dnn/ToSic.Sxc.Dnn/ToSic.Sxc.Dnn.csproj
@@ -21,12 +21,7 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
 
-    <UseIISExpress>false</UseIISExpress>
-    <!--<IISExpressSSLPort />
-    <IISExpressAnonymousAuthentication />
-    <IISExpressWindowsAuthentication />
-    <IISExpressUseClassicPipelineMode />
-    <TypeScriptToolsVersion>2.1</TypeScriptToolsVersion>-->
+    <!-- This places the EAV DLLs here, for the copy-deploy during Dev to work -->
     <OutputPath>bin\</OutputPath>
   </PropertyGroup>
 
@@ -38,9 +33,9 @@
   <PropertyGroup>
     <NoWarn>$(NoWarn);MSB3277;</NoWarn>
     <!-- ignore warning that Dnn was loaded 2x - ATM necessary for MS build? @STV -->
-    <NoWarn>MSB4011</NoWarn>
+    <NoWarn>$(NoWarn);MSB4011</NoWarn>
     <!-- ignore warning that it's using a dangerous version of Dnn (v9.6.1) @2dm -->
-    <NoWarn>NU1902</NoWarn>
+    <NoWarn>$(NoWarn);NU1902</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
