Drop some useless assemblyInfos

--- a/Src/Oqtane/ToSic.Sxc.Oqt.Server.Tests/ToSic.Sxc.Oqt.Server.Tests.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Server.Tests/ToSic.Sxc.Oqt.Server.Tests.csproj
@@ -28,4 +28,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
